<resources>

    <string name="app_name" >NearTweet
    </string>

    <string name="action_settings" >Settings
    </string>

    <string name="username" >User Name: 
    </string>

    <string name="login" >Login
    </string>

    <string name="empty" ></string>

    <string name="title_activity_tweetlist" >NearTweet
    </string>

    <string name="profilename" >Profile Name
    </string>

    <string name="tweets" >Tweets
    </string>

    <string name="logout" >Logout
    </string>

    <string name="viewpoll" >View Poll(s)
    </string>
    
    <string name="createpoll" >Create Poll
    </string>
    
    <string name="poll" >Poll
    </string>

    <string name="title_activity_tweet" >NearTweet
    </string>

    <string name="tweet" >Tweet
    </string>

    <string name="refresh" >Refresh
    </string>

    <string name="photo" >Photo
    </string>

    <string name="gps" >GPS
    </string>

    <string name="sendtweet" >SendTweet
    </string>

    <string name="reply" >Reply
    </string>

    <string name="retweet" >Retweet
    </string>

    <string name="spam" >Spam
    </string>

    <string name="tweetselected" >Tweet Selected
    </string>
    <string name="tweetlist">tweetlist
    </string>   
    <string name="spamtweet">spamtweet
    </string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="app_id">160929487409513</string>
    <string name="instructions">Login to your FB account</string>
    <string name="exception">Exception: %1$s</string>
    <string name="pollList">Lista de Polls</string>

</resources>