<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="3"
    android:useDefaultMargins="true" >

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp" />

    <EditText
        android:id="@+id/enter_usernameTx"
        android:layout_column="2"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/empty" >
    </EditText>

    <TextView
        android:layout_column="1"
        android:layout_gravity="left|center_vertical"
        android:layout_row="1"
        android:text="@string/username" />

    <Button
        android:id="@+id/loginBt"
        android:layout_column="2"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2"
        android:onClick="loginResponse"
        android:text="@string/login" />

</GridLayout>