<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TweetListActivity" >

    <Space
        android:layout_column="1"
        android:layout_gravity="fill_vertical"
        android:layout_row="5" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="290dp"
        android:layout_height="100dp"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="1"
        android:ems="10"
        android:inputType="textMultiLine"
        android:singleLine="false" >

        <requestFocus />
    </EditText>
    <!-- android:drawableTop="@drawable/photo" -->
    <!-- android:drawableCenter="@drawable/gps" -->

    <Button
        android:id="@+id/photo"
        android:layout_width="113dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:onClick="photoPopUp"
        android:text="@string/photo" />
   <!--  android:drawableTop="@drawable/photo"  -->

    <Button
        android:id="@+id/gps"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2"
        android:onClick="getGpsData"
        android:text="@string/gps" />

    <Button
        android:id="@+id/sendtweet"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="2"
        android:onClick="sendtweet"
        android:text="@string/sendtweet" />



</GridLayout>